# puppet-cube-v2

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
include/glad/: glad.h
legal-move-generation/: main.cpp
position_data/: corner-data.cpp  edge-data.cpp
src/: PuppetCubeV2  actions.cpp  actions.h  cube.cpp  cube.h  error_handler.cpp  error_handler.h  glad.c  main.cpp  mesh.cpp  mesh.h  renderer.cpp  renderer.h  rotation.cpp  rotation.h  search.cpp  search.h  search_manager.cpp  search_manager.h  settings.cpp  settings.h  shader.cpp  shader.frag  shader.h  shader.vert  tablebase.cpp  tablebase.h  window_manager.cpp  window_manager.h
